--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jasonroyle/ng2-img-map.git"
+    "url": "git+https://github.com/Tekliko/ng2-img-map.git"
   },
   "keywords": [
     "angular",
@@ -30,6 +30,9 @@
     "url": "https://github.com/jasonroyle/ng2-img-map/issues"
   },
   "homepage": "https://github.com/jasonroyle/ng2-img-map#readme",
+  "dependencies": {
+    "point-in-polygon": "latest"
+  },
   "devDependencies": {
     "es6-shim": "^0.35.1",
     "typescript": "^1.8.10",
