--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "ng2-img-map",
+  "title": "ng2-img-map",
   "version": "0.1.2",
+  "releaseDate": "1970-01-01",
   "description": "Responsive image mapping interface for Angular 2",
   "main": "ng2-img-map.js",
   "scripts": {
